--- a/env/pyvenv.cfg
+++ b/env/pyvenv.cfg
@@ -1,5 +1,5 @@
-home = C:\Users\chris\AppData\Local\Programs\Python\Python312
+home = C:\Users\fadhl\AppData\Local\Programs\Python\Python312
 include-system-site-packages = false
 version = 3.12.4
-executable = C:\Users\chris\AppData\Local\Programs\Python\Python312\python.exe
-command = C:\Users\chris\AppData\Local\Programs\Python\Python312\python.exe -m venv C:\Users\chris\OneDrive\Documents\kuliah\Databasu\SIJARTA\env
+executable = C:\Users\fadhl\AppData\Local\Programs\Python\Python312\python.exe
+command = C:\Users\fadhl\AppData\Local\Programs\Python\Python312\python.exe -m venv C:\Users\fadhl\Downloads\tugas kelompok basdat fix\SIJARTA\env
