--- a/env/pyvenv.cfg
+++ b/env/pyvenv.cfg
@@ -1,5 +1,3 @@
-home = C:\Users\fadhl\AppData\Local\Programs\Python\Python312
+home = /Users/palastha/Desktop/CSUI/tutorial-env/bin
 include-system-site-packages = false
-version = 3.12.4
-executable = C:\Users\fadhl\AppData\Local\Programs\Python\Python312\python.exe
-command = C:\Users\fadhl\AppData\Local\Programs\Python\Python312\python.exe -m venv C:\Users\fadhl\Downloads\tugas kelompok basdat fix\SIJARTA\env
+version = 3.10.4
