--- a/env/pyvenv.cfg
+++ b/env/pyvenv.cfg
@@ -1,5 +1,5 @@
-home = C:\Users\chris\AppData\Local\Programs\Python\Python312
+home = C:\Users\dzikr\AppData\Local\Microsoft\WindowsApps\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0
 include-system-site-packages = false
-version = 3.12.4
-executable = C:\Users\chris\AppData\Local\Programs\Python\Python312\python.exe
-command = C:\Users\chris\AppData\Local\Programs\Python\Python312\python.exe -m venv C:\Users\chris\OneDrive\Documents\kuliah\Databasu\SIJARTA\env
+version = 3.11.9
+executable = C:\Users\dzikr\AppData\Local\Microsoft\WindowsApps\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\python.exe
+command = C:\Users\dzikr\AppData\Local\Microsoft\WindowsApps\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\python.exe -m venv C:\Users\dzikr\Paaciiilll\BasDat\TK\APP-SIJARTA\env
